[tool.poetry]
name = "ml_inter"
version = "0.1.0"
description = ""
authors = ["jinInoue-rrr <inojin0326@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
jupyterlab = "^3.5.1"
numpy = "^1.23.5"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
scikit-learn = "^1.2.0"
shap = "^0.41.0"
japanize-matplotlib = "^1.1.3"
statsmodels = "^0.13.5"

[tool.poetry.dev-dependencies]
ipykernel = "^6.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
